--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,3 +63,12 @@ section#login > div#formulario {
     display: block;
     padding: 10px;
 }
+
+div#fomulario > h1 {
+    text-align: center;
+    margin: 10px;
+}
+
+div#fomulario > p {
+    font-size: 0.8em;
+}
