--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 
-@media screen and (min-width: 768px) and (max-width: 992px){
+@media screen and (min-width: 768px) and (max-width: 992px){/* CONFIGURAÇÃO PARA TABLET */
 
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
@@ -9,7 +9,7 @@
 
     section#login {
         width: 80vw;
-
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -24,7 +24,7 @@
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /* CONFIGURAÇÃO PARA DESKTOP */
 
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
@@ -32,6 +32,7 @@
 
     section#login {
         width: 950px;
+        height: 350px;
     }
     section#login > div#imagem {
         float: right;
@@ -51,5 +52,6 @@
 
     div#fomulario > p {
         font-size: 1.2em;
+        margin: 20px 0px;
     }
 }
