--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -4,7 +4,7 @@
 @media screen and (min-width: 768px) and (max-width: 992px){/* CONFIGURAÇÃO PARA TABLET */
 
     body {
-        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+        background-image: linear-gradient(to top, #49a09d, #202857);
     }
 
     section#login {
@@ -27,7 +27,7 @@
 @media screen and (min-width: 992px) { /* CONFIGURAÇÃO PARA DESKTOP */
 
     body {
-        background-image: linear-gradient(to top, #49a09d, #5f2c82);
+        background-image: linear-gradient(to top, #49a09d, #202857);
     }
 
     section#login {
