--- a/estilos/style.css
+++ b/estilos/style.css
@@ -21,8 +21,9 @@
     box-sizing: border-box;
 }
 
+
 body, html {
-    background-color: #5f2c82;
+    background-color: #3152AD;
     height: 100vh;
     width: 100vw;
 }
@@ -53,7 +54,7 @@ section#login {
 
 section#login > div#imagem {
     display: block;
-    background: #5f2c82 url(../imagens/pexels-pixabay-210182.jpg) no-repeat;
+    background: #3152AD url(../imagens/pexels-pixabay-210182.jpg) no-repeat;
     background-size: cover;
     background-position: left bottom;
     height: 200px;
@@ -62,21 +63,22 @@ section#login > div#imagem {
 
 section#login > div#formulario {
     display: block;
-    padding: 10px;
+    padding: 5px;
 }
 
 div#fomulario > h1 {
     text-align: center;
-    margin: 10px;
+    margin: 20px;
 }
 
 div#fomulario > p {
     font-size: 0.8em;
+    padding: 20px;
 }
 
 form > div.campo {
-    background-color: #5f2c82;
-    border: 2px solid #5f2c82;
+    background-color:#202857;
+    border: 2px solid #202857;
     width: 100%;
     display: block;
     height: 40px;
