--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -12,9 +12,10 @@
         height: 280px;
     }
 
+
     section#login > div#imagem {
         float: left;
-        width: 30%;
+        width: 237px;
         height: 100%;
     }
 
@@ -37,7 +38,7 @@
     section#login > div#imagem {
         float: right;
         width: 50%;
-        height: 100%;
+        height: 430px;
     }
 
     section#login > div#formulario {
