--- a/estilos/style.css
+++ b/estilos/style.css
@@ -54,10 +54,10 @@ section#login {
 
 section#login > div#imagem {
     display: block;
-    background: #3152AD url(../imagens/pexels-pixabay-210182.jpg) no-repeat;
+    background: #3152AD url(../imagens/argôlo.jpg) no-repeat;
     background-size: cover;
     background-position: left bottom;
-    height: 200px;
+    height: 230px;
 
 }
 
@@ -107,7 +107,7 @@ div.campo > input {
     border: 0px;
     border-radius: 8px;
     padding: 4px;
-    transform: translateY(-12px);
+    transform: translateY(-13px);
 }
 
 div.campo > input:focus-within {
@@ -146,7 +146,7 @@ form > a.botao {
 }
 
 form > a.botao:hover {
-    background-color: #6cd3cf;
+    background-color: #49a09d;
 }
 
 form > a.botao > span {
